# DZ_fastapi

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  check_db.py  dragonzap.xlsx  dz_fastapi.log.1  dz_fastapi.log.10  dz_fastapi.log.100  dz_fastapi.log.11  dz_fastapi.log.12  dz_fastapi.log.13  dz_fastapi.log.14  dz_fastapi.log.15  dz_fastapi.log.16  dz_fastapi.log.17  dz_fastapi.log.18  dz_fastapi.log.19  dz_fastapi.log.2  dz_fastapi.log.20  dz_fastapi.log.21  dz_fastapi.log.22  dz_fastapi.log.23  dz_fastapi.log.24  dz_fastapi.log.25  dz_fastapi.log.26  dz_fastapi.log.27  dz_fastapi.log.28  dz_fastapi.log.29  dz_fastapi.log.3  dz_fastapi.log.30  dz_fastapi.log.31  dz_fastapi.log.32  dz_fastapi.log.33  dz_fastapi.log.34  dz_fastapi.log.35  dz_fastapi.log.36  dz_fastapi.log.37  dz_fastapi.log.38  dz_fastapi.log.39  (+70 more)
.claude/: launch.json
alembic/: env.py
docs/: autopurchase_tz.md
dz_fastapi/: main.py  scheduler_runner.py  test_brand_syninym.py
init-db/: 02-create-dz_test.sql
scripts/: backfill_dragonzap_provider_links.py  canonicalize_autoparts_by_brand_synonyms.py  google_gmail_refresh_token.py  normalize_autopart_names.py
tests/: conftest.py  test_auth.py  test_autopart.py  test_autopart_dedup.py  test_autopurchase_service.py  test_brand.py  test_constants.py  test_cross_import.py  test_cross_service.py  test_customer_order_schema.py  test_customer_orders_api.py  test_customer_orders_mailbox_scope.py  test_customer_orders_matching.py  test_customer_orders_response.py  test_customer_pricelist_source_schema.py  test_dashboard_order_dynamics.py  test_db.py  test_diadoc_api.py  test_email_account_schema.py  test_email_accounts.py  test_email_service.py  test_http_client.py  test_inbox_email_api.py  test_inbox_email_service.py  test_inventory_api_lot_flow.py  test_inventory_dashboard.py  test_inventory_lot_flow.py  test_inventory_returns_api.py  test_nomenclature_api.py  test_order_api.py  test_order_status_mapping_api.py  test_partner.py  test_placed_orders.py  test_price_history.py  (+8 more)
(+631 files in other folders)
